# samplecat

./: .clang-format  .ctagsignore  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CHANGELOG  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  audio.c  audio.h  autogen.sh  build-deb.sh  build_test  buildmac.sh  cellrenderer_hypertext.c  configure.ac  db.c  db.h  dh-link.c  dnd.c  dnd.h  front  index.html  main.c  main.h  overview.c  overview.h  params.json  peak.c  pixmaps.c  resources.xml  rox_global.h  samplecat.1  samplecat.icns  samplecat.txt  (+8 more)
ayyi/: Makefile.am  ayyi.h  ayyi_action.c  ayyi_action.h  ayyi_client.c  ayyi_client.h  ayyi_dbus.c  ayyi_dbus.h  ayyi_list.c  ayyi_list.h  ayyi_log.c  ayyi_log.h  ayyi_mixer.c  ayyi_mixer.h  ayyi_msg.h  ayyi_seg0.c  ayyi_seg0.h  ayyi_server.c  ayyi_server.h  ayyi_shm.c  ayyi_shm.h  ayyi_song.c  ayyi_song.h  ayyi_time.c  ayyi_time.h  ayyi_typedefs.h  ayyi_types.h  ayyi_utils.c  ayyi_utils.h  dbus_marshallers.c  dbus_marshallers.h  engine_proxy.c  engine_proxy.h  interface.h
experimental/gl-app/: Makefile.am  action.h  application.c  application.h  atspi.c  atspi.h  directory.c  directory.h  glx.c  glx.h  keys.h  layout.c  layout.h  main.c  samplecat.yaml  samplecat_gl.c  shader.c  shader.h  style.c  style.h  utils.c  utils.h  valgrind  yaml_utils.c  yaml_utils.h
experimental/mx/: .gitignore  Makefile.am  list_item.c  list_item.h  list_model.c  list_model.h  list_view.c  list_view.h  main.c  marshal.list  style.css
experimental/webkit/: .gitignore  Makefile.am  table.c  table.h  util.c  util.h  webkit.c
layouts2/: All.yaml  Default.yaml  File_Manager.yaml  Inspector.yaml  Makefile.am  __default__.xml  __default__.yaml  make_ui
lib/audio_analysis/: Makefile.am
lib/debug/: Makefile.am  debug.c  debug.h  debug.vapi  instrument.c
lib/dir-tree/: Makefile.am  filelist.c  layout_util.c  layout_util.h  typedefs.h  ui_fileops.c  ui_menu.c  ui_menu.h  ui_tree_edit.c  view_dir_tree.c  view_dir_tree.h
lib/dir_tree/: Makefile.am  filelist.c  filelist.h  gqview.h  layout_util.c  layout_util.h  pixbuf_util.c  typedefs.h  ui_fileops.c  ui_fileops.h  ui_menu.c  ui_tree_edit.c  ui_tree_edit.h  utilops.c  view_dir_tree.c  view_dir_tree.h
lib/file_manager/: Makefile.am  cell_icon.c  cell_icon.h  dir.c  dir.h  diritem.c  diritem.h  display.c  display.h  dnd.h  file_manager.c  file_manager.h  file_view.c  file_view.h  filemanager.c  filemanager.h  filer.c  filer.h  fscache.c  fscache.h  menu.c  menu.h  mimetype.c  mimetype.h  minibuffer.c  minibuffer.h  pixmaps.c  pixmaps.h  rox_global.h  rox_support.c  support.c  support.h  typedefs.h  view_iface.c  view_iface.h
lib/gdl/: .gitignore  Makefile.am  debug.c  debug.h  factory.c  factory.h  gdl-dock-bar.c  gdl-dock-bar.h  gdl-dock-item-button-image.c  gdl-dock-item-button-image.h  gdl-dock-item-grip.c  gdl-dock-item-grip.h  gdl-dock-item.c  gdl-dock-item.h  gdl-dock-layout.c  gdl-dock-layout.h  gdl-dock-master.c  gdl-dock-master.h  gdl-dock-notebook.c  gdl-dock-notebook.h  gdl-dock-object.c  gdl-dock-object.h  gdl-dock-paned.c  gdl-dock-paned.h  gdl-dock-placeholder.c  gdl-dock-placeholder.h  gdl-dock-tablabel.c  gdl-dock-tablabel.h  gdl-dock.c  gdl-dock.h  gdl-gtk-paned-handle.c  gdl-gtk-paned.c  gdl-switcher.c  gdl-switcher.h  gdl-tools.h  gdl.h  il8n.h  layout.c  layout.h  layout.ui  (+21 more)
lib/gtk/: Makefile.am  cellrenderer_hypertext.c  cellrenderer_hypertext.h  editablelabelbutton.c  editablelabelbutton.h  gimpactiongroup.c  gimpactiongroup.h  icon_theme.c  icon_theme.h  menu.c  menu.h  scrolled_window.h  table.c  table.h  utils.c  utils.h
lib/menu/: Makefile.am  actionhelper.c  actionhelper.h  actionmuxer.c  actionmuxerprivate.h  actionobservable.c  actionobservableprivate.h  actionobserver.c  allocatedbitmask.c  bitmaskprivate.h  bitmaskprivateimpl.h  gizmo.c  gizmoprivate.h  menusectionbox.c  menusectionboxprivate.h  menutracker.c  menutrackeritem.c  menutrackeritemprivate.h  menutrackerprivate.h  modelbutton.c  modelbutton.h  popovermenu.c  popovermenu.h  popovermenuprivate.h  utils.c  utils.h  widget.c  widgetfocus.c  widgetfocus.h  widgetprivate.h
lib/samplecat/: Makefile.am  application.c  application.h  dh_link.c  dh_link.h  dir_list.c  dir_list.h  list_store.c  list_store.h  logger.c  logger.h  model.c  model.h  observable.c  observable.h  palette.c  palette.h  sample.c  sample.h  sample_row.c  sample_row.h  samplecat.c  samplecat.h  settings.c  settings.h  support.c  support.h  throttle.c  throttle.h  typedefs.h  usage.c  work.c  work.h  worker.c  worker.h
lib/utils/: Makefile.am  ayyi_utils.c  ayyi_utils.h  behaviour_subject.c  behaviour_subject.h  fs.c  fs.h  fscache.c  fscache.h  mime_type.c  mime_type.h  observable.c  observable.h  pixmaps.c  pixmaps.h  timing.c  timing.h
lib/yaml/: Makefile.am  load.c  load.h  save.c  save.h  test.c
src/: Makefile.am  application-nogui.c  application-nogui.h  application.c  application.h  audio.c  audio.h  auditioner.c  auditioner.h  ayyi.c  ayyi.h  ayyi_model.c  ayyi_model.h  cellrenderer_hypertext.c  cellrenderer_hypertext.h  colour_box.c  colour_box.h  console_view.c  console_view.h  db.c  db.h  dh-link.h  dh_link.c  dh_link.h  dh_tree.c  dh_tree.h  directories.c  directories.h  diritem.c  diritem.h  dnd.c  dnd.h  editablelabelbutton.c  editablelabelbutton.h  file_view.c  file_view.h  fscache.c  fscache.h  gauditioner.c  gl_spectrogram_view.c  (+70 more)
src/audio_decoder/: ad.h  ad_ffmpeg.c  ad_flac.c  ad_plugin.c  ad_plugin.h  ad_soundfile.c  ffcompat.h
src/db/: Makefile.am  _tracker-0.6.c  db.c  db.h  mysql.c  mysql.h  sqlite.c  sqlite.h  tracker.c  tracker.h  tracker_.h
src/dir_tree/: filelist.c  gqview.h  layout_util.c  layout_util.h  pixbuf_util.c  pixbuf_util.h  ui_menu.c  utilops.c
src/file_manager/: Makefile.am  cell_icon.c  dir.c  dir.h  diritem.c  display.c  file_manager.c  file_manager.h  file_view.c  file_view.h  filer.c  filer.h  menu.c  menu.h  mimetype.c  mimetype.h  support.c  support.h
src/gimp/: Makefile.am  gimpaction.c  gimpaction.h  gimpactiongroup.c  gimpactiongroup.h
src/gqview2/: filelist.c  (+11 more)
(+371 files in other folders)
